@@ -1,3 +1,4 @@
+Option DC_PWR bestimmt die Batteriespannung, oberhalb derer der DC_Pwr_Mode eingeschaltet wird.
 Korrekturfaktor bei der C*ESR@TP1:3 Kapazitätsmessung durch 2.5% höhere Spannung.
 Auch bei C+ESR@TP1:3 wird negative Restspannung berücksichtigt.
 Bei Kondensatormessung mit grosser Kapazität wird negative Restspannung berücksichtigt.
